--- a/src/components/05_entities/CardBlogComponent/CardBlogComponent.module.scss
+++ b/src/components/05_entities/CardBlogComponent/CardBlogComponent.module.scss
@@ -87,7 +87,7 @@
 
 .image {
   width: 100%;
-  height: 100%;
+  height: auto;
   max-height: 480px;
   object-fit: cover;
   object-position: center;
